WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
CLOSED FIXED
Bug 38075
[Qt] GraphicsLayer: Reverse animations don't work in some use cases
https://bugs.webkit.org/show_bug.cgi?id=38075
Summary
[Qt] GraphicsLayer: Reverse animations don't work in some use cases
Noam Rosenthal
Reported
2010-04-23 18:51:57 PDT
Some transition paths don't animate. See
bug 38071
for test case.
Attachments
Removed a buggy code-path that's no longer necessary
(3.81 KB, patch)
2010-04-24 08:45 PDT
,
Noam Rosenthal
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Noam Rosenthal
Comment 1
2010-04-24 08:45:10 PDT
Created
attachment 54218
[details]
Removed a buggy code-path that's no longer necessary
WebKit Commit Bot
Comment 2
2010-04-29 03:04:56 PDT
Comment on
attachment 54218
[details]
Removed a buggy code-path that's no longer necessary Clearing flags on attachment: 54218 Committed
r58492
: <
http://trac.webkit.org/changeset/58492
>
WebKit Commit Bot
Comment 3
2010-04-29 03:05:00 PDT
All reviewed patches have been landed. Closing bug.
Simon Hausmann
Comment 4
2010-04-30 00:04:05 PDT
Revision
r58492
cherry-picked into qtwebkit-2.0 with commit 80b7420cabdeb77d88d643f08bac9e4e957e0fc5
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug